remove user for nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-user nginx;
+# user nginx;
 worker_processes auto;  # Automatically adjust number of worker processes based on CPU
 
 # Optimize file descriptors
